# Backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  config.py  conftest.py  db.db  db.sqlite3  docker-compose.yaml  docker-compose.yml  jwt-private.pem  jwt-public.pem  main.py  models.py  orders.py  pyproject.toml  pytest.ini  requirements.txt  service.py  specialist.py  storage.py
Orders/: dependencies.py  service.py  shema.py  views.py
alembic/: env.py
app/: main.py
auth/: config.py  dependencies.py  jwt.py  service.py  shemas.py  utils.py  views.py
barber_shop/: alembic.ini  pyproject.toml
barber_shop/app/: config.py  database.py  exceptions.py  logger.py  main.py  rate_limiter.py  token_bucket.py
barber_shop/app/migrations/: env.py
barber_shop/app/migrations/versions/: 2024_10_19_0836-b1d37d648435_initial_migration.py  3df7e1e5fa16_initial_migration.py  6488204d0a25_initial_migration.py  6b3fb9422bc7_initial_migration.py  85ceacdb9065_initial_migration.py  a26b76dbc03d_initial_migration.py  aecfbf4a8dee_initial_migration.py  b7c7a4811594_initial_migration.py  db4cc01a42d6_initial_migration.py
barber_shop/app/orders/: dao.py  models.py  router.py  schemas.py
barber_shop/app/services/: dao.py  models.py  router.py  schemas.py
barber_shop/app/services/service_images/: dao.py  models.py  router.py
barber_shop/app/specialists/: dao.py  models.py  router.py  schemas.py
barber_shop/app/specialists/avatars/: dao.py  models.py  router.py  schemas.py
barber_shop/app/tests/: conftest.py  mock_orders.json  mock_services.json  mock_specialists.json
barber_shop/app/tests/end_to_end_tests/: test_services.py
barber_shop/app/tests/integration_tests/test_orders/: test_api.py
barber_shop/app/tests/integration_tests/test_services/: test_api.py
barber_shop/app/tests/integration_tests/test_specialists/: test_api.py
barber_shop/app/tests/unit_tests/test_orders/: test_dao.py
barber_shop/app/tests/unit_tests/test_services/: test_dao.py
barber_shop/app/tests/unit_tests/test_specialists/: test_dao.py
barbeshop/: Dockerfile  config.py  database.py  main.py  middleware.py  rate_limiter.py
config/: patch1732911320-21628
dao/: base.py
database/: __init__.py  config.py  database.py  db_helper.py  logging_conf.py  rate_limit.py  redis_config.py  redis_dec.py
docker_compose/: app.yaml
exeptions/: exeptions.py
fastApiProject/: .gitignore  alembic.ini  config.py  main.py  requirements.txt
migrations/: env.py
models/: __init__.py  base.py  orders.py  service.py  specialist.py  token.py  user.py
orders/: orderDAO.py  order_model.py  order_model_db.py  orders.py
orders_service/: .env.example  Dockerfile  Makefile  docker-compose.yaml
service/: service.py  shema.py  views.py
(+158 files in other folders)
